fix: fix text wrapping in textarea and change input to ttextarea

--- a/rss-css-selectors/src/sass/base/_textSelectors.scss
+++ b/rss-css-selectors/src/sass/base/_textSelectors.scss
@@ -13,3 +13,10 @@
 .tag-selector {
   color: black;
 }
+
+.class-selector,
+.id-selector,
+.attr-selector,
+.tag-selector {
+  word-wrap: break-word;
+}
